# super_calc_toml

./: Readme.md  pyproject.toml  requirements-2024-05-19.txt
doc/: dump_help.md  dump_help_cleaned.md
supercalc/: __init__.py  constants.py  dumphelp_to_file.py  editable_install_experiments.py  main.py  notes-2024-08-12.md
supercalc/calc/: calc.py
supercalc/scientific/: scientific_calc.py
supercalc/simple/: __init__.py  simple_calc.py
supercalc/simple/int_group/: __init__.py  int_group.py
tests/: simple_calc_test.py
