[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "supercalc"
version = "0.0.1"
authors = [{ name = "Bjoern" }]
readme = "Readme.md"

dependencies = []

[project.scripts]
"suca" = "supercalc.__main__:main"
# "suca" = "supercalc.simple.simple_calc:main_group"
# "sucas" = "supercalc.scientific.scientific_calc:cli"


[tool.setuptools]
packages = ["supercalc"]

[tool.black]
line-length = 100
